@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.lgtv.remote"
        name="LG Smart TV 3D Switch"
-       version="0.1.1"
+       version="0.1.2"
        provider-name="Birger Jesch">
   <extension point="xbmc.service"
         library="default.py" start="login" />
