@@ -16,6 +16,7 @@
     <string id="30021">Key Code sequence 3D on</string>
     <string id="30022">Key Code sequence 3D off</string>
     <!-- delay -->
+    <string id="30024">250 msec</string>
     <string id="30025">500 msec</string>
     <string id="30026">750 msec</string>
     <string id="30027">1000 msec</string>
